# Daatelli

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-image.yaml  deploy.yaml  format-check.yaml
deploy/: backend-deployment.yaml  docker-compose.yaml  frontend-deployment.yaml  prometheus.yml
src/: App.tsx
src/actions/: auth.ts  findings.ts  register.ts  user.ts
src/actions/config/: index.ts
src/backend/: Dockerfile  Makefile  pyproject.toml
src/backend/core/: main.py
src/backend/core/daatelli/api/: router.py
src/backend/core/daatelli/api/v1/: auth.py
src/backend/daatelli/: main.py
src/backend/daatelli/core/api/: router.py
src/backend/daatelli/core/api/v1/: feed.py  findings.py  health_check.py  schemas.py  users.py
src/backend/daatelli/version/: __init__.py
src/components/: AddResearchButton.tsx  Attestation.tsx  InfoItem.tsx  MessagesBanner.tsx  Modal.tsx  NavBar.tsx  ProtectedRoute.tsx  RegisterForm.tsx  RootLogin.tsx  ScreenUpdateDisplay.tsx  SideBar.tsx  UserProfileUpdates.tsx
src/components/posts/: ResearchPosts.tsx
src/components/research/: AddCitations.tsx  AddResearchButton.tsx  AuthorsDragAndDrop.tsx  CitationsList.tsx  FindingsDragAndDrop.tsx  FindingsFormElement.tsx  ResearchTypes.tsx  SelectMultipleResearchers.tsx
src/constants/: index.ts
src/contexts/: index.ts
src/frontend/: Dockerfile  dev.Dockerfile  nginx.conf  package.json  start-nginx.sh  tailwind.config.js
src/frontend/src/: App.tsx  (+1 more)
src/lib/: fields.ts  utils.ts
src/types/: enums.ts  types.ts
(+107 files in other folders)
