[tool.poetry]
name = "daatelli"
version = "0.1.0"
description = "Share your research findings with the world and find out what is trending in your research domain. Get quick insights from powerful AI models to improve your next field study."
authors = ["Olanrewaju Olaleru <olalerulanre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
prometheus-fastapi-instrumentator = "^7.0.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
